# routes/api.php
@@ -1,9 +1,12 @@
 <?php
 
+use App\Http\Controllers\CustomerController;
 use App\Http\Controllers\Report;
 use Illuminate\Support\Facades\Route;
 
 Route::prefix('v1')->group(function () {
+    Route::apiResource('customers', CustomerController::class);
+
     Route::prefix('reports')->group(function () {
         Route::prefix('orders')->group(function () {
             Route::get('monthly-trend', Report\OrderMonthlyTrendReportController::class);
